--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,8 @@ on:
     branches:
     - '**'
     - '!dependabot/**'
+    tags:
+    - '**'
   pull_request: {}
 
 jobs:
@@ -12,7 +14,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2.3.1
     - uses: actions/setup-go@v2.1.0
       with:
         go-version: 1.14.x
@@ -24,7 +26,7 @@ jobs:
     if: github.event_name == 'push' && startsWith(github.repository, 'vmware-labs/')
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2.3.1
     - uses: actions/setup-go@v2.1.0
       with:
         go-version: 1.14.x
@@ -66,13 +68,13 @@ jobs:
     needs: stage
     if: |
       github.event_name == 'push' && startsWith(github.repository, 'vmware-labs/') && (
-        github.ref == 'refs/heads/main' || (
+        github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') || (
           startsWith(github.ref, 'refs/heads/v') && endsWith(github.ref, 'x')
         )
       )
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2.3.1
     - name: gcloud auth
       run: |
         gcloud config set disable_prompts True
@@ -80,6 +82,7 @@ jobs:
       env:
         GCLOUD_CLIENT_SECRET: ${{ secrets.GCLOUD_CLIENT_SECRET }}
     - name: Publish artifacts
+      id: publish
       run: |
         set -o errexit
         set -o nounset
@@ -114,3 +117,28 @@ jobs:
           # avoids overwriting existing values
           gsutil -h 'Content-Type: text/plain' -h 'Cache-Control: private' cp -n <(echo "${slug}") gs://projectriff/service-bindings/versions/releases/${version}
         fi
+
+        # setup release
+        echo ::set-output name=version::${version}
+        mkdir dist/
+        gsutil -h "${cache_control}" rsync -d ${bucket}/snapshots/${slug}/ dist/
+    - name: Draft Release
+      if: startsWith(github.ref, 'refs/tags/')
+      id: create_release
+      uses: actions/create-release@v1.1.2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: true
+    - name: Upload Release Asset
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: actions/upload-release-asset@v1.0.2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+        asset_path: ./dist/service-bindings.yaml
+        asset_name: service-bindings-${{ steps.publish.outputs.version }}.yaml
+        asset_content_type: application/x-yaml
