--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,20 +61,23 @@ jobs:
       with:
         name: service-bindings.yaml
         path: service-bindings.yaml
-  
-  # TODO add acceptance tests
-  # acceptance: {}
 
-  publish:
-    # TODO restore once we have acceptance tests
-    # needs: acceptance
-    needs: stage
-    if: |
-      github.event_name == 'push' && startsWith(github.repository, 'vmware-labs/') && (
-        github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') || (
-          startsWith(github.ref, 'refs/heads/v') && endsWith(github.ref, 'x')
-        )
-      )
+  acceptance:
+    if: github.event_name == 'push' && startsWith(github.repository, 'vmware-labs/')
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2.3.1
+    - name: Download staged asset
+      uses: actions/download-artifact@v2.0.1
+      with:
+        name: service-bindings.yaml
+        path: service-bindings.yaml
+    - run: cat service-bindings.yaml
+    # TODO add acceptance tests
+
+  release:
+    needs: acceptance
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.3.1
@@ -83,7 +86,6 @@ jobs:
       run: |
         echo ::set-output name=version::$(cat VERSION)
     - name: Draft release
-      if: startsWith(github.ref, 'refs/tags/')
       id: create_release
       uses: actions/create-release@v1.1.2
       env:
@@ -98,7 +100,6 @@ jobs:
         name: service-bindings.yaml
         path: service-bindings.yaml
     - name: Upload release asset
-      if: startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-release-asset@v1.0.2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
