Report unit test coverage to codecov
Add stub tests to packages that should have tests, but don't so that
they are reported with 0% coverage.

Signed-off-by: Scott Andrews <andrewssc@vmware.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,11 @@ jobs:
       with:
         go-version: 1.14.x
     - name: Test
-      run: go test ./...
+      run: go test ./... -coverprofile cover.out
+    - name: Report coverage
+      run: bash <(curl -s https://codecov.io/bash)
+      env:
+        CODECOV_TOKEN: a99a7ac2-ad9e-4c7a-b33a-17732e3469f4
 
   stage:
     needs: test
