--- a/samples/spring-petclinic/application.yaml
+++ b/samples/spring-petclinic/application.yaml
@@ -5,30 +5,30 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: petclinic
+  name: spring-petclinic
 spec:
   ports:
   - port: 80
     targetPort: 8080
   selector:
-    app: petclinic
+    app: spring-petclinic
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: petclinic
+  name: spring-petclinic
   labels:
-    app: petclinic
+    app: spring-petclinic
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: petclinic
+      app: spring-petclinic
   template:
     metadata:
       labels:
-        app: petclinic
+        app: spring-petclinic
     spec:
       containers:
         - name: application
