Use kapp to install
Adding basic acceptance tests using the spring-petclinic sample.

Signed-off-by: Scott Andrews <andrewssc@vmware.com>

--- a/samples/spring-petclinic/service.yaml
+++ b/samples/spring-petclinic/service.yaml
@@ -18,7 +18,7 @@ metadata:
 type: Opaque
 stringData:
   type: mysql
-  host: petclinic-db
+  host: spring-petclinic-db
   port: "3306"
   database: default
   # demo credentials
@@ -29,28 +29,28 @@ stringData:
 apiVersion: v1
 kind: Service
 metadata:
-  name: petclinic-db
+  name: spring-petclinic-db
 spec:
   ports:
   - port: 3306
   selector:
-    app: petclinic-db
+    app: spring-petclinic-db
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: petclinic-db
+  name: spring-petclinic-db
   labels:
-    app: petclinic-db
+    app: spring-petclinic-db
 spec:
   selector:
     matchLabels:
-      app: petclinic-db
+      app: spring-petclinic-db
   template:
     metadata:
       labels:
-        app: petclinic-db
+        app: spring-petclinic-db
     spec:
       # no persistance configured, the database will be reset when the pod terminates
       containers:
