--- a/samples/spring-petclinic/service.yaml
+++ b/samples/spring-petclinic/service.yaml
@@ -18,6 +18,7 @@ metadata:
 type: Opaque
 stringData:
   type: mysql
+  provider: mariadb
   host: spring-petclinic-db
   port: "3306"
   database: default
@@ -54,7 +55,7 @@ spec:
     spec:
       # no persistance configured, the database will be reset when the pod terminates
       containers:
-      - image: mysql:5.6
+      - image: mariadb:10.5
         name: mysql
         env:
         - name: MYSQL_USER
