--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,14 +70,56 @@ jobs:
     needs: stage
     if: github.event_name == 'push' && startsWith(github.repository, 'vmware-labs/')
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        k8s:
+        - 1.16.9
+        - 1.17.5
+        - 1.18.6
+      fail-fast: false
     steps:
     - uses: actions/checkout@v2.3.1
     - name: Download staged asset
       uses: actions/download-artifact@v2.0.3
       with:
         name: service-bindings.yaml
-    - run: cat service-bindings.yaml
-    # TODO add acceptance tests
+    - name: Install kind
+      run: |
+        curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.8.1/kind-linux-amd64
+        chmod +x ./kind
+        sudo mv ./kind /usr/local/bin
+    - name: Install kapp
+      run: |
+        curl -Lo ./kapp https://github.com/k14s/kapp/releases/download/v0.31.0/kapp-linux-amd64
+        chmod +x ./kapp
+        sudo mv ./kapp /usr/local/bin
+    - name: Create cluster
+      run: kind create cluster --wait 5m --image kindest/node:v${{ matrix.k8s }}
+    - name: Install Service Bindings
+      run: kapp deploy -a service-bindings -f service-bindings.yaml -y
+    - name: Deploy Spring Petclinic
+      run: kapp deploy -a spring-petclinic -f samples/spring-petclinic -y
+    - name: Collect Spring Petclinic diagnostics
+      run: |
+        echo "##[group]Petclinic deployment"
+          kubectl get deployment spring-petclinic -oyaml
+        echo "##[endgroup]"
+        echo "##[group]Petclinic logs"
+          kubectl logs -l app=spring-petclinic -c application --tail 1000
+        echo "##[endgroup]"
+        echo "##[group]MySQL deployment"
+          kubectl get deployment spring-petclinic-db -oyaml
+        echo "##[endgroup]"
+        echo "##[group]MySQL logs"
+          kubectl logs -l app=spring-petclinic-db -c mysql --tail 1000
+        echo "##[endgroup]"
+      if: always()
+    - name: Cleanup Service Bindings
+      run: kapp delete -a service-bindings -y
+      if: always()
+    - name: Cleanup cluster
+      run: kind delete cluster
+      if: always()
 
   release:
     needs: acceptance
