--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -186,5 +186,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
         asset_path: service-bindings-core.yaml
-        asset_name: service-bindings-${{ steps.get-version.outputs.version }}.yaml
+        asset_name: service-bindings-core-${{ steps.get-version.outputs.version }}.yaml
         asset_content_type: application/x-yaml
