--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,7 +57,7 @@ jobs:
         readonly git_timestamp=$(TZ=UTC git show --quiet --date='format-local:%Y%m%d%H%M%S' --format="%cd")
         readonly slug=${version}-${git_timestamp}-${git_sha:0:16}
 
-        ko resolve -t ${slug} --strict -B -R -f config | sed -e "s|bindings.labs.vmware.com/release: devel|bindings.labs.vmware.com/release: ${slug}|" > service-bindings.yaml
+        ko resolve -t ${slug} --strict -B -f config | sed -e "s|bindings.labs.vmware.com/release: devel|bindings.labs.vmware.com/release: ${slug}|" > service-bindings.yaml
       env:
         KO_DOCKER_REPO: docker.io/vmware
     - name: Upload Service Bindings build
@@ -108,7 +108,7 @@ jobs:
         sudo mv ./ko /usr/local/bin
         cd -
 
-        ko resolve -L --strict -B -R -f config > service-bindings.yaml
+        ko resolve -L --strict -B -f config > service-bindings.yaml
         cat service-bindings.yaml | grep -oh 'ko.local[^\w]*' | xargs -L 1 kind load docker-image
     - name: Deploy Service Bindings
       run: kapp deploy -a service-bindings -f service-bindings.yaml -y
@@ -143,11 +143,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.3.2
-    - name: Install ytt
-      run: |
-        curl -Lo ./ytt https://github.com/k14s/ytt/releases/download/v0.30.0/ytt-linux-amd64
-        chmod +x ./ytt
-        sudo mv ./ytt /usr/local/bin
     - name: Get release version
       id: get-version
       run: |
@@ -165,12 +160,6 @@ jobs:
       uses: actions/download-artifact@v2.0.5
       with:
         name: service-bindings.yaml
-    - name: Transform Service Bindings build for alt distributions
-      run: |
-        ytt -f service-bindings.yaml \
-            -f hack/drop-kapp-config.ytt.yaml \
-            --file-mark service-bindings.yaml:type=yaml-plain \
-            > service-bindings-core.yaml
     - name: Upload Service Bindings release
       uses: actions/upload-release-asset@v1.0.2
       env:
@@ -179,13 +168,4 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
         asset_path: service-bindings.yaml
         asset_name: service-bindings-${{ steps.get-version.outputs.version }}.yaml
-        asset_content_type: application/x-yaml
-    - name: Upload Service Bindings alt release
-      uses: actions/upload-release-asset@v1.0.2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: service-bindings-core.yaml
-        asset_name: service-bindings-core-${{ steps.get-version.outputs.version }}.yaml
         asset_content_type: application/x-yaml
