Update samples to consume secrets directly
This makes the sample portable to other implementations. Also adding a
new sample to show using a ProvisionedService.

Signed-off-by: Scott Andrews <andrewssc@vmware.com>

--- a/samples/controlled-resource/service-binding.yaml
+++ b/samples/controlled-resource/service-binding.yaml
@@ -14,9 +14,10 @@ spec:
     selector:
       matchLabels:
         serving.knative.dev/service: controlled-resource
+  # direct Secret reference is used for compatibility, but not recommended for dynamically provisioned services
   service:
-    apiVersion: bindings.labs.vmware.com/v1alpha1
-    kind: ProvisionedService
+    apiVersion: v1
+    kind: Secret
     name: controlled-resource
   env:
   - name: TARGET
