--- a/samples/custom-projection/service-binding.yaml
+++ b/samples/custom-projection/service-binding.yaml
@@ -14,9 +14,10 @@ spec:
   # PodSpecable, replace with the desired application.
   application:
     apiVersion: v1
-    kind: Secret
+    kind: ConfigMap
     name: custom
+  # direct Secret reference is used for compatibility, but not recommended for dynamically provisioned services
   service:
-    apiVersion: bindings.labs.vmware.com/v1alpha1
-    kind: ProvisionedService
+    apiVersion: v1
+    kind: Secret
     name: custom
