--- a/samples/spring-petclinic/service-binding.yaml
+++ b/samples/spring-petclinic/service-binding.yaml
@@ -11,7 +11,8 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: spring-petclinic
+  # direct Secret reference is used for compatibility, but not recommended for dynamically provisioned services
   service:
-    apiVersion: bindings.labs.vmware.com/v1alpha1
-    kind: ProvisionedService
+    apiVersion: v1
+    kind: Secret
     name: spring-petclinic-db
