Add label to ProvisionedService CRD to aid discovery
Signed-off-by: Scott Andrews <andrewssc@vmware.com>

--- a/config/300-provisionedservice.yaml
+++ b/config/300-provisionedservice.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     bindings.labs.vmware.com/release: devel
     bindings.labs.vmware.com/crd-install: "true"
+    service.binding/provisioned-service: "true"
 spec:
   group: bindings.labs.vmware.com
   names:
