Define custom Secret type
Replace the default Secret type of 'Opaque' with a custom value based
on the data type. This will help advertise the content of the Secret and
aid in discovery.

Signed-off-by: Scott Andrews <andrewssc@vmware.com>

--- a/samples/spring-petclinic/service.yaml
+++ b/samples/spring-petclinic/service.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: spring-petclinic-db
-type: Opaque
+type: service.binding/mysql
 stringData:
   type: mysql
   provider: mariadb
