--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,7 +73,6 @@ jobs:
     strategy:
       matrix:
         k8s:
-        - 1.17.17
         - 1.18.15
         - 1.19.7
         - 1.20.2
@@ -114,16 +113,19 @@ jobs:
     - name: Deploy Service Bindings
       run: kapp deploy -a service-bindings -f service-bindings.yaml -y
     - name: Deploy Spring Petclinic
-      run: kapp deploy -a spring-petclinic -f samples/spring-petclinic -y
-    - name: Collect Service Binding diagnostics
+      run: |
+        set -o errexit
+        set -o nounset
+        set -o pipefail
+
+        kapp deploy -a spring-petclinic-db -f samples/spring-petclinic/service.yaml -y
+        kapp deploy -a spring-petclinic-binding -f samples/spring-petclinic/service-binding.yaml -y
+        kapp deploy -a spring-petclinic -f samples/spring-petclinic/application.yaml -y
+    - name: Collect diagnostics
       run: |
         echo "##[group]Service Binding manager logs"
           kubectl logs -n service-bindings -l app=manager -c manager --tail 1000
         echo "##[endgroup]"
-      if: always()
-      continue-on-error: true
-    - name: Collect Spring Petclinic diagnostics
-      run: |
         echo "##[group]Petclinic deployment"
           kubectl get deployment spring-petclinic -oyaml
         echo "##[endgroup]"
@@ -136,8 +138,26 @@ jobs:
         echo "##[group]MySQL logs"
           kubectl logs -l app=spring-petclinic-db -c mysql --tail 1000
         echo "##[endgroup]"
+        echo "##[group]All resources"
+          kubectl get all,secrets --all-namespaces
+        echo "##[endgroup]"
+        echo "##[group]Describe pods"
+          kubectl describe pods
+        echo "##[endgroup]"
+        echo "##[group]Describe nodes"
+          kubectl describe nodes
+        echo "##[endgroup]"
       if: always()
       continue-on-error: true
+    - name: Cleanup Spring Petclinic
+      run: |
+        set -o errexit
+        set -o nounset
+        set -o pipefail
+
+        kapp delete -a spring-petclinic-db -y
+        kapp delete -a spring-petclinic-binding -y
+        kapp delete -a spring-petclinic -y
     - name: Cleanup Service Bindings
       run: kapp delete -a service-bindings -y
       if: always()
