--- a/samples/overridden-type-provider/service.yaml
+++ b/samples/overridden-type-provider/service.yaml
@@ -5,9 +5,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mappings
+  name: overridden-type-provider
 type: Opaque
 stringData:
-  username: sfalken
-  password: JOSHUA
-  host: wopr.norad.mil
+  type: original-type
+  provider: original-provider
